# crypto-systems-portfolio

./: .gitignore  README.md
projects/personal-order-book/: README.md
projects/personal-order-book/drift-indexer/: .env.example  package.json  server.js
projects/personal-order-book/indexer/: package.json  server.js
projects/personal-order-book/rust-client/: Cargo.toml
projects/personal-order-book/rust-client/src/: main.rs
projects/singularity-solana-dex/: README.md
projects/singularity-solana-dex/backend/: Cargo.toml  oracle_config.sample.json
projects/singularity-solana-dex/backend/migrations/: 001_init.sql
projects/singularity-solana-dex/backend/src/: config.rs  db.rs  errors.rs  liquidation.rs  main.rs  models.rs  oracle.rs  price_feed.rs  risk.rs  routes.rs  solana.rs  solana_balance.rs  state.rs
projects/singularity-solana-dex/frontend/: app.js  index.html  package.json  styles.css  vite.config.js
projects/singularity-solana-dex/frontend/src/: main.js  sdk-loader.js
projects/singularity-solana-dex/program/: Cargo.toml
projects/singularity-solana-dex/program/src/: lib.rs
projects/solanarpsl/: README.md
projects/solanarpsl/frontend/: package-lock.json  package.json
projects/solanarpsl/frontend/app/: globals.css  layout.tsx  page.tsx
projects/srpsl-tokenized-rps-wagering-league/: README.md  sheets-apps-script
