[package]
name = "singularity_perps_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
urlencoding = "2.1.3"
async-trait = "0.1.80"
borsh = "0.10.3"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.34.3", features = ["serde"] }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "rust_decimal", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.56"
reqwest = { version = "0.12.5", features = ["json"] }
tower-http = { version = "0.5.2", features = ["cors"] }

[features]
default = []
solana = []

[workspace]
